# dl_exps

./: .gitignore  pyproject.toml
dl_modelling/data/datasets/: mnist.py  mnist_det.py  mnist_mm.py
dl_modelling/data/preprocessing/: preproc.py
