[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dl_modelling"
version = "0.0.1"
authors = [
  { name="Raviteja Chukkapalli", email="ravichbits@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject"

[tool.hatch.build.targets.wheel]
packages = ["dl_modelling"]
